# Gemstone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
application/application/: CMakeLists.txt  core.hpp  main.cpp  shaders.hpp
application/assets/shaders/: fragment.frag  fragment2.frag  lightLighting.frag  objectLighting.frag  stripped.vert  vertex.vert
application/shaders/: fragment.frag  fragment2.frag  vertex.vert
cmake/: CreateRawStringFile.cmake  VendorLibraries.cmake
gemstone/gemstone/: CMakeLists.txt  core.hpp
gemstone/gemstone/application/: Application.cpp  Application.hpp  CMakeLists.txt  logger.hpp
gemstone/gemstone/camera/: CMakeLists.txt  Camera.cpp  Camera.hpp  logger.hpp
gemstone/gemstone/light/: CMakeLists.txt  DirectionalLight.cpp  DirectionalLight.hpp  Light.cpp  Light.hpp  ObjectLight.cpp  ObjectLight.hpp  PointLight.cpp  PointLight.hpp  PositionalLight.cpp  PositionalLight.hpp  SpotLight.cpp  SpotLight.hpp  logger.hpp
gemstone/gemstone/managers/: CMakeLists.txt
gemstone/gemstone/managers/input/: CMakeLists.txt  InputManager.cpp  InputManager.hpp  logger.hpp
gemstone/gemstone/mesh/: Mesh.cpp  Mesh.hpp  logger.hpp
gemstone/gemstone/object/: CMakeLists.txt  Object.cpp  Object.hpp  logger.hpp
gemstone/gemstone/renderer/: CMakeLists.txt
gemstone/gemstone/renderer/context/: CMakeLists.txt  Context.cpp  Context.hpp  logger.hpp
gemstone/gemstone/renderer/material/: CMakeLists.txt  Material.cpp  Material.hpp  logger.hpp
gemstone/gemstone/renderer/mesh/: CMakeLists.txt  Mesh.cpp  Mesh.hpp
gemstone/gemstone/renderer/model/: CMakeLists.txt  Model.cpp  Model.hpp  logger.hpp
gemstone/gemstone/renderer/shader/: CMakeLists.txt  CompiledShader.cpp  CompiledShader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  logger.hpp
gemstone/gemstone/renderer/texture/: CMakeLists.txt  Texture.cpp  Texture.hpp  logger.hpp
gemstone/gemstone/scene/: CMakeLists.txt  Scene.cpp  Scene.hpp  logger.hpp
gemstone/gemstone/shader/: CMakeLists.txt  CompiledShader.cpp  CompiledShader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  logger.hpp
gemstone/gemstone/texture/: CMakeLists.txt  Texture.cpp  Texture.hpp
gemstone/util/: CMakeLists.txt  macros.hpp  platform.hpp
gemstone/util/io/: CMakeLists.txt  FileSystem.cpp  FileSystem.hpp  logger.hpp
gemstone/util/logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
