#====================================================================
# Add all of the gemstone libraries
#====================================================================
add_subdirectory(application)
add_subdirectory(camera)
add_subdirectory(scene)
add_subdirectory(shader)
add_subdirectory(mesh)
add_subdirectory(texture)
