#====================================================================
# Add all of the renderer libraries
#====================================================================
add_subdirectory(context)
add_subdirectory(material)
add_subdirectory(mesh)
add_subdirectory(model)
add_subdirectory(shader)
add_subdirectory(texture)